<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">スタバで呪文</string>
    
    <!-- タブ -->
    <string name="tab_like">お好み</string>
    <string name="tab_menu">メニュー</string>
    <string name="tab_ranking">ランキング</string>
    
    <!-- メニュー -->
    <string name="menu_view_mode_visual">Visual Mode</string>
    <string name="menu_view_mode_simple">Simple Mode</string>
    
    <!-- 設定 -->
    <string name="setting_title">設定</string>
    <string name="setting_back">&lt; 戻る</string>
    
    <!-- ランキング -->
    <string name="ranking_price">Price</string>
    <string name="ranking_calorie">Calorie</string>
    <string name="ranking_social">Social</string>
    
    <!-- 設定画面 -->
    <string name="setting_support_page">サポートページ</string>
    <string name="setting_mail">メールで問い合わせる</string>
    <string name="setting_dev_team">開発チーム</string>
    
    <!-- カスタム画面 -->
    <string name="custom_title">カスタム</string>
    <string name="custom_back">&lt; 戻る</string>
    <string name="custom_please_select_topping">好きなカスタマイズを選択</string>
    <string name="custom_tempureture_select_hot">ホット</string>
    <string name="custom_tempureture_select_ice">アイス</string>
    
    <!-- オーダー -->
    <string name="order_title">オーダー</string>
    <string name="order_back">&lt; カスタム</string>
    <string name="order_jumon">呪文</string>
    <string name="order_up_image">写真を選ぶ</string>
    <string name="order_up_cancel_image">写真をキャンセル</string>
    <string name="order_up_close">閉じる</string>
    <string name="order_will_read_jumon">呪文を唱えます</string>
    <string name="order_cant_read_jumon">呪文を唱えられません。\nネットワークに接続してください。</string>
</resources>
