<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
    
    <ListView
        android:id="@+id/ListMenu"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1
        "
        ></ListView>
    
    <RadioGroup
        android:id="@+id/RadioGroupMenuShowType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:gravity="center"
        android:background="@color/starbucks_green"
        >
        <RadioButton
            android:id="@+id/RadioPrice"
            android:text="@string/ranking_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/selector_menu_type_radio_background_left"
            style="@style/ViewModeTab"
            />
        <RadioButton
            android:id="@+id/RadioCalorie"
            android:text="@string/ranking_calorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_menu_type_radio_background"
            android:button="@null"
            style="@style/ViewModeTab"
            />
        <RadioButton
            android:id="@+id/RadioSocial"
            android:text="@string/ranking_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_menu_type_radio_background_right"
            android:button="@null"
            style="@style/ViewModeTab"
            />
    </RadioGroup>
    
</LinearLayout>
